SERVER-7685 Reduce stack usage for V8